--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coloredlogs==15.0.1
 Flask==3.1.1
 flask-cors==6.0.0
 flatbuffers==25.2.10
+gunicorn==23.0.0
 humanfriendly==10.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
